[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyCrawling.new2.gd" type="Script" id=2]
[ext_resource path="res://assests/images/enemy-small.png" type="Texture" id=3]
[ext_resource path="res://assests/collisions/bodies/EnemyCrawling.new2.body.tres" type="Shape2D" id=4]
[ext_resource path="res://assests/collisions/bodies/EnemyCrawling.new2.body2.tres" type="Shape2D" id=5]

[node name="EnemyCrawling" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
MOVEMENT_SPEED = 20

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Body" parent="." index="1"]
shape = ExtResource( 4 )

[node name="Body2" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, 2 )
shape = ExtResource( 5 )
disabled = true

[node name="ViewArea" parent="." index="4"]
editor/display_folded = true
collision_layer = 2

[node name="GroundBack" type="RayCast2D" parent="." index="6"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="GroundMid" type="RayCast2D" parent="." index="7"]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="GroundFront" type="RayCast2D" parent="." index="8"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="Face" type="RayCast2D" parent="." index="9"]
cast_to = Vector2( 4, 0 )
